# advent-of-code

./: .gitignore  LICENSE.md  README.md
2021/aoc-python-2021/: day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  pyproject.toml  test_day18.py  test_day19.py  test_day22.py  test_day24.py
2023/aoc-python-2023/: pyproject.toml
2023/aoc-python-2023/src/aoc_python_2023/: day03.py  day07.py
2023/aoc-python-2023/tests/: test_day03.py  test_day07.py
2023/aoc-racket-2023/: day01.rkt  day02.rkt  day03.rkt  day04.rkt  day06.rkt  day07.rkt  day11.rkt  utils.rkt
2023/aoc-racket-2023/tests/: day01.rkt  day02.rkt  day03.rkt  day04.rkt  day07.rkt
