[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
authors = ["David Edwards <david.edwards@freeagent.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.4"
tqdm = "^4.62.3"
scipy = "^1.7.3"
toolz = "^0.11.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
